--- a/Open-ILS/web/reports/oils_rpt_builder.xhtml
+++ b/Open-ILS/web/reports/oils_rpt_builder.xhtml
@@ -35,10 +35,10 @@
 						<table id='oils_rpt_name_table'><tbody>
 							<tr>
 								<td width='20%'>Template Name: </td>
-								<td><input size='32' onchange="oilsRpt.name=this.value"/></td>
+								<td><input size='32' id='oils_rpt_builder_new_name'/></td>
 							</tr><tr>
 								<td>Template Description: </td>
-								<td><textarea cols='50' rows='2' id='oils_rpt_builder_desc_text' onchange='oilsRpt.desc = this.value;'/></td>
+								<td><textarea cols='50' rows='2' id='oils_rpt_builder_new_desc'/></td>
 							</tr><tr>
 								<td>Template Type: </td>
 								<td><select id='oils_rpt_builder_type_selector'/></td>
