--- a/Open-ILS/web/reports/oils_rpt_folder_window.xhtml
+++ b/Open-ILS/web/reports/oils_rpt_folder_window.xhtml
@@ -1,11 +1,13 @@
 <div id='oils_rpt_folder_window_contents_div'>
+	<div style='width:100%;text-align: center; margin: 10px;'>
+		<a id='oils_rpt_folder_window_contents_new_template' href='javascript:void(0);'><b>Create a new Template</b></a>
+	</div>
 	<table id='oils_rpt_folder_window_contents_table'>
 		<tbody>
 			<tr>
 				<td> 
 					<span>
 						<select id='oils_rpt_folder_contents_action_selector' style='width: auto;'>
-							<option value='create_template' type='template'>Create a new template in this folder</option>
 							<option type='template' value='create_report'>Create a new report from selected template</option>
 							<option type='template' value='clone_template'>Clone selected template</option>
 							<option type='template' value='delete_template'>Delete selected template(s)</option>
