added report description creation at run-time and so much more

--- a/Open-ILS/web/reports/oils_rpt_editor.xhtml
+++ b/Open-ILS/web/reports/oils_rpt_editor.xhtml
@@ -47,9 +47,9 @@
 							<tr>
 								<th>Run on:</th>
 								<td>
-									<input name="sched_start_date" type="text" size="10"/>
+									<input id="oils_rpt_param_editor_sched_start_date" type="text" size="10"/>
 										at
-									<select name="sched_start_hour">
+									<select id='oils_rpt_param_editor_sched_start_hour'>
 										<option value="00:00">Midnight</option>
 										<option value="01:00">1 AM</option>
 										<option value="02:00">2 AM</option>
@@ -79,7 +79,7 @@
 							</tr>
 							<tr>
 								<th>Send completion notification to this Email address:</th>
-								<td><input name="sched_email" type="text" size="25"/></td>
+								<td><input id="oils_rpt_param_editor_sched_email" type="text" size="25"/></td>
 							</tr>
 							<tr>
 								<th>Choose a folder to store this report's output: </th>
