--- a/Open-ILS/web/reports/oils_rpt_folder_manager.xhtml
+++ b/Open-ILS/web/reports/oils_rpt_folder_manager.xhtml
@@ -5,6 +5,9 @@
 		<option value='create_sub_folder'>Create a new sub-folder</option>
 		<option id='oils_rpt_folder_manager_share_opt' value='share'>Share this folder</option>
 		<option id='oils_rpt_folder_manager_unshare_opt' value='unshare'>Hide (un-share) this folder</option>
+
+		<option class='hide_me'>Disable recurrance</option><!-- XXX -->
+
 	</select>
 	<input id='oils_rpt_folder_manager_actions_submit' type='submit' value='Go'/>
 
