--- a/Open-ILS/web/reports/oils_rpt_editor.xhtml
+++ b/Open-ILS/web/reports/oils_rpt_editor.xhtml
@@ -42,6 +42,23 @@
 			<tr><td colspan='2'><hr/></td></tr>
 			<tr>
 				<td colspan='2'>
+					<ul>
+						<li><input type="checkbox" id="oils_rpt_format_excel" value="t" checked="checked"/><span>Excel Output</span></li>
+						<li><input type="checkbox" id="oils_rpt_format_csv" value="t"/><span>CSV Output</span></li>
+						<li>
+							<input type="checkbox" id="oils_rpt_format_html" value="t" checked="checked"/>HTML Output
+							<ul>
+								<li><input type="checkbox" id="oils_rpt_format_chart_bar" value="t" checked="checked"/><span>Bar Charts</span></li>
+								<li><input type="checkbox" id="oils_rpt_format_chart_pie" value="t"/><span>Pie Charts</span></li>
+								<li><input type="checkbox" id="oils_rpt_format_chart_line" value="t"/><span>Line Charts</span></li>
+							</ul>
+						</li>
+					</ul>
+
+				</td>
+			</tr>
+			<tr>
+				<td colspan='2'>
 					<table>
 						<tbody>
 							<tr>
