adding a Run ASAP button

--- a/Open-ILS/web/reports/oils_rpt_editor.xhtml
+++ b/Open-ILS/web/reports/oils_rpt_editor.xhtml
@@ -41,6 +41,9 @@
 			</tr>
 			<tr><td colspan='2'><hr/></td></tr>
 			<tr>
+				<th colspan='2'>Output Options</th>
+			</tr>
+			<tr>
 				<td colspan='2'>
 					<ul>
 						<li><input type="checkbox" id="oils_rpt_format_excel" value="t" checked="checked"/><span>Excel Output</span></li>
@@ -57,6 +60,12 @@
 
 				</td>
 			</tr>
+			<tr>
+				<td colspan='2'>
+					<input id='oils_rpt_report_editor_run_now' type='submit' value='Run ASAP'/> or...
+				</td>
+			</tr>
+			<tr><td colspan='2'><hr/></td></tr>
 			<tr>
 				<td colspan='2'>
 					<table>
