--- a/Open-ILS/web/reports/oils_rpt_folder_window.xhtml
+++ b/Open-ILS/web/reports/oils_rpt_folder_window.xhtml
@@ -24,7 +24,23 @@
 			<tr class='oils_rpt_folder_window_contents_row'>
 				<td width='100%' align='center'>
 					<table width='100%'><tbody>
-						<tr><td align='center'><h4>Folder Contents</h4></td></tr>
+						<tr>
+							<td align='center'>
+								<h4>Folder Contents</h4>
+								<span style='padding-left: 10px;'>
+									Limit output to 
+									<select id='oils_rpt_output_limit_selector'>
+										<option value='5'>5</option>
+										<option value='10'>10</option>
+										<option value='25'>25</option>
+										<option value='50'>50</option>
+										<option value=''>All</option>
+									</select>
+									rows.
+									<input type='submit' value='Re-Draw' id='oils_rpt_output_limit_redraw'/>
+								</span>
+							</td>
+						</tr>
 						<tr><td><div id='oils_rpt_folder_contents_selector'/></td></tr>
 					</tbody></table>
 				</td>
