--- a/Open-ILS/web/reports/oils_rpt_editor.xhtml
+++ b/Open-ILS/web/reports/oils_rpt_editor.xhtml
@@ -60,18 +60,17 @@
 
 				</td>
 			</tr>
-			<tr>
-				<td colspan='2'>
-					<input id='oils_rpt_report_editor_run_now' type='submit' value='Run ASAP'/> or...
-				</td>
-			</tr>
 			<tr><td colspan='2'><hr/></td></tr>
 			<tr>
 				<td colspan='2'>
 					<table>
 						<tbody>
 							<tr>
-								<th>Run on:</th>
+								<th>
+									<span>Run ASAP </span>
+										<input type='checkbox' id='oils_rpt_report_editor_run_now'/>
+									<span> or at :</span>
+								</th>
 								<td>
 									<input id="oils_rpt_param_editor_sched_start_date" type="text" size="10"/>
 										at
