--- a/Open-ILS/web/reports/oils_rpt_common.xhtml
+++ b/Open-ILS/web/reports/oils_rpt_common.xhtml
@@ -15,6 +15,7 @@
 <script language='javascript' src='/opac/common/js/sorttable.js'> </script>
 <script language='javascript' src='/opac/common/js/fm_table.js'> </script>
 <script language='javascript' src='/opac/common/js/fm_table_conf.js'> </script>
+<script language='javascript' src='/opac/common/js/md5.js'> </script>
 <script>
 	stpicopen  = '../opac/images/slimtree/folder2.gif';
 	stpicclose = '../opac/images/slimtree/folderopen2.gif';
