removed the ability to send reports to other user's shared folders

--- a/Open-ILS/web/reports/oils_rpt_folder_window.xhtml
+++ b/Open-ILS/web/reports/oils_rpt_folder_window.xhtml
@@ -9,10 +9,10 @@
 					<span>
 						<select id='oils_rpt_folder_contents_action_selector' style='width: auto;'>
 							<option type='template' value='create_report'>Create a new report from selected template</option>
-							<option type='template' value='clone_template'>Clone selected template</option>
+							<option type='template' value='clone_template' disabled='disabled'>Clone selected template</option>
 							<option type='template' value='delete_template'>Delete selected template(s)</option>
-							<option type='report' value='change_params'>Clone report</option>
-							<option type='report' value='schedule_report'>Schedule report</option>
+							<option type='report' value='change_params' disabled='disabled'>Clone report</option>
+							<option type='report' value='schedule_report' disabled='disabled'>Schedule report</option>
 							<option type='report' value='delete_report'>Delete selected report(s)</option>
 							<option type='output' value='show_output'>View report output</option>
 							<option type='output' value='delete_output'>Delete selected output(s)</option>
