protecting other users items from delete calls directly in the UI (to prevent confusion)

--- a/Open-ILS/web/reports/oils_rpt_folder_window.xhtml
+++ b/Open-ILS/web/reports/oils_rpt_folder_window.xhtml
@@ -59,5 +59,9 @@
 		that depend on it.
 	</span>
 
+	<span class='hide_me' id='oils_rpt_folder_contents_no_delete'>
+		You may not delete another user's items
+	</span>
+
 </div>
 
