added is/is not NULL runtime relative date are partially implemented moved transforms out to a JS file for centralized location and configuration

--- a/Open-ILS/web/reports/oils_rpt_builder.xhtml
+++ b/Open-ILS/web/reports/oils_rpt_builder.xhtml
@@ -92,8 +92,7 @@
 				<input size='28' id='oils_rpt_tform_label_input'/>
 				<div class='oils_rpt_field_editor_window'>
 					<div style='margin-bottom: 10px;'>Select how this field should be displayed:</div>
-					<!--#set var="OILS_RPT_TFORM_TABLE_ID" value="oils_rpt_tform_table"-->
-					<!--#include virtual="oils_rpt_tforms.xhtml"-->
+					<div id='oils_rpt_tform_table'/>
 				</div>
 				<br/><br/>
 				<button id='oils_rpt_tform_submit'>Add Item</button>
@@ -106,8 +105,7 @@
 						<table><tbody><tr>
 							<td>Choose a Transform: </td>
 							<td>
-								<!--#set var="OILS_RPT_TFORM_TABLE_ID" value="oils_rpt_filter_tform_table"-->
-								<!--#include virtual="oils_rpt_tforms.xhtml"-->
+								<div id='oils_rpt_filter_tform_table'/>
 							</td>
 						</tr>
 						<tr>	
