--- a/Open-ILS/web/reports/oils_rpt_ops.xhtml
+++ b/Open-ILS/web/reports/oils_rpt_ops.xhtml
@@ -19,56 +19,12 @@
 					<option value='not in'>Not in (comma separated list)</option>
 					<option value='between'>Between</option>
 					<option value='not between'>Not between</option>
+					<option value='is'>Is NULL</option>
+					<option value='is not'>Is not NULL</option>
 				</select>
 
 			</td>
 
-			<td class='hide_me' name='widget_td'> <!-- DEPRECATED -->
-				<!-- Define all of the helpful user data widgets here -->
-
-				<input widget='1' id='oils_rpt_filter_tform_input' size='12' type='text'/>
-
-				<input widget='1' id='oils_rpt_filter_tform_date_1' size='10' maxlength='10' type='text'/>
-				<input widget='1' id='oils_rpt_filter_tform_date_2' size='10' maxlength='10' type='text'/>
-				<span  widget='1' id='oils_rpt_filter_tform_date_hint'>(YYYY-MM-DD)</span>
-
-
-				<select widget='1' id='oils_rpt_filter_tform_timestamp_day_selector'>
-					<!--#include virtual="oils_rpt_day_opts.xhtml"-->
-				</select>
-
-				<select widget='1' id='oils_rpt_filter_tform_timestamp_dom_selector'>
-					<!--#include virtual="oils_rpt_dom_opts.xhtml"-->
-				</select>
-
-				<select widget='1' id='oils_rpt_filter_tform_timestamp_month_selector'>
-					<!--#include virtual="oils_rpt_month_opts.xhtml"-->
-				</select>
-
-				<select widget='1' id='oils_rpt_filter_tform_timestamp_quarter_selector'>
-					<!--#include virtual="oils_rpt_quarter_opts.xhtml"-->
-				</select>
-
-
-				<select widget='1' id='oils_rpt_filter_tform_timestamp_day_selector_2'>
-					<!--#include virtual="oils_rpt_day_opts.xhtml"-->
-				</select>
-
-				<select widget='1' id='oils_rpt_filter_tform_timestamp_dom_selector_2'>
-					<!--#include virtual="oils_rpt_dom_opts.xhtml"-->
-				</select>
-
-				<select widget='1' id='oils_rpt_filter_tform_timestamp_month_selector_2'>
-					<!--#include virtual="oils_rpt_month_opts.xhtml"-->
-				</select>
-
-				<select widget='1' id='oils_rpt_filter_tform_timestamp_quarter_selector_2'>
-					<!--#include virtual="oils_rpt_quarter_opts.xhtml"-->
-				</select>
-
-				<input widget='1' id='oils_rpt_filter_tform_input_2' size='10' type='text'/>
-
-			</td>
 		</tr>
 	</tbody>
 </table>
