--- a/Open-ILS/web/reports/oils_rpt_tforms.xhtml
+++ b/Open-ILS/web/reports/oils_rpt_tforms.xhtml
@@ -35,6 +35,7 @@
 					<option value='year_trunc' datatype='timestamp'>Year</option>
 					<option value='day_name' datatype='timestamp'>Day Name</option>
 					<option value='month_name' datatype='timestamp'>Month Name</option>
+					<option value='age' datatype='timestamp'>Age</option>
 					
 					<!-- int transforms -->
 					<option value='count' datatype='int' aggregate='1'>Count</option>
