--- a/Open-ILS/web/reports/oils_rpt_common.xhtml
+++ b/Open-ILS/web/reports/oils_rpt_common.xhtml
@@ -43,6 +43,7 @@
 <script type="text/javascript" src="oils_rpt_widget.js"></script>
 <script type="text/javascript" src="oils_rpt_param_editor.js"></script>
 <script type="text/javascript" src="oils_rpt_tforms.js"></script>
+<script type="text/javascript" src="oils_rpt_filters.js"></script>
 <script type="text/javascript" src="oils_rpt.js"></script>
 <script type="text/javascript" src="oils_rpt_report_editor.js"></script>
 
