--- a/Open-ILS/web/reports/oils_rpt_tforms.xhtml
+++ b/Open-ILS/web/reports/oils_rpt_tforms.xhtml
@@ -1,3 +1,7 @@
+<!--
+	DEPRECATED 
+-->
+
 <!-- Generic selecto for transforms -->
 <table id='<!--#echo var="OILS_RPT_TFORM_TABLE_ID"-->'> 
 	<tbody>
