--- a/Open-ILS/web/reports/oils_rpt_common.xhtml
+++ b/Open-ILS/web/reports/oils_rpt_common.xhtml
@@ -54,3 +54,11 @@
 
 
 
+<span class='hide_me' id='oils_rpt_generic_success'>
+	Action Succeeded
+</span>
+
+<span class='hide_me' id='oils_rpt_generic_failure'>
+	Action Failed
+</span>
+
