added relative tforms to tform set, some small tweaks, beginnings of potential alternat widget handling

--- a/Open-ILS/web/reports/oils_rpt_param_editor.xhtml
+++ b/Open-ILS/web/reports/oils_rpt_param_editor.xhtml
@@ -68,7 +68,10 @@
 				<td name='transform'/>
 				<td name='action'/>
 				<td>
-					<div name='widget'/>
+					<div>
+						<span name='hint'/>
+						<span name='widget'/>
+					</div>
 					<div name='reldate_div'  style='margin-top: 5px;' class='hide_me'>
 						<div><b> - OR - </b></div>
 						<input type='checkbox' name='choose_rel'/> Use a relative date instead.
