added order_by clause creation, did some basic testing now i need to add order_by pruning when deleting display items

--- a/Open-ILS/web/reports/oils_rpt_builder.xhtml
+++ b/Open-ILS/web/reports/oils_rpt_builder.xhtml
@@ -153,19 +153,17 @@
 					</div>
 					<div>
 						<table><tbody>
-							<!--
 							<tr>
 							<td>Choose a column: </td>
 							<td>
 								<select id='oils_rpt_order_by_selector'/>
 							</td>
 						</tr>
-						-->
 						<tr>	
 							<td>Choose the direction the sorting should occur: </td>
 							<td>
 								<select id='oils_rpt_order_by_dir'>
-									<option selected='selected'>Ascending</option>
+									<option value='ascending' selected='selected'>Ascending</option>
 									<option value='descending'>Descending</option>
 								</select>
 							</td>
