refactoring widgets, round one

--- a/Open-ILS/web/reports/oils_rpt_common.xhtml
+++ b/Open-ILS/web/reports/oils_rpt_common.xhtml
@@ -62,3 +62,12 @@
 	Action Failed
 </span>
 
+
+<button style='padding: 0px;' id='generic_calendar_button'>
+	<img src="/opac/common/js/jscalendar/img.gif"
+		style="cursor: pointer; border: 1px solid red; padding: 0px; margin: -3px;"
+		title="Date selector"
+		onmouseover="this.style.background='red';"
+		onmouseout="this.style.background=''" />
+</button>
+
