more widget work, relative times working, needs more testing

--- a/Open-ILS/web/reports/oils_rpt_common.xhtml
+++ b/Open-ILS/web/reports/oils_rpt_common.xhtml
@@ -63,7 +63,7 @@
 </span>
 
 
-<button style='padding: 0px;' id='generic_calendar_button'>
+<button style='padding: 0px;' id='generic_calendar_button' class='hide_me'>
 	<img src="/opac/common/js/jscalendar/img.gif"
 		style="cursor: pointer; border: 1px solid red; padding: 0px; margin: -3px;"
 		title="Date selector"
