fixed an output delete bug, added a brief column display in the report editor

--- a/Open-ILS/web/reports/oils_rpt_editor.xhtml
+++ b/Open-ILS/web/reports/oils_rpt_editor.xhtml
@@ -22,6 +22,10 @@
 				<td>Report Description:</td>
 				<td><textarea cols='45' rows='2' id='oils_rpt_report_editor_desc'/></td>
 			</tr>
+			<tr>
+				<td>Report Columns:</td>
+				<td><b id='oils_rpt_report_editor_cols'/></td>
+			</tr>
 			<tr><td colspan='2'><hr/></td></tr>
 			<tr>
 				<th>Choose a folder to store this report definition: </th>
