added sanity checks to user params to verify data is getting filled in
added permission check to folder sharing

--- a/Open-ILS/web/reports/oils_rpt.xhtml
+++ b/Open-ILS/web/reports/oils_rpt.xhtml
@@ -101,7 +101,7 @@
 										<td>Share this folder:</td>
 										<td>
 											<select id='oils_rpt_top_folder_shared'>
-												<option value='f'>Do not share</option>
+												<option value='f' selected='selected'>Do not share</option>
 												<option value='t'>Share</option>
 											</select>
 										</td>
