--- a/Open-ILS/web/reports/oils_rpt_editor.xhtml
+++ b/Open-ILS/web/reports/oils_rpt_editor.xhtml
@@ -134,4 +134,10 @@
 
 		</tbody>
 	</table>
+
+	<span id='oils_rpt_empty_param' class='hide_me'>
+		One or more of the user-defined parameters has been left empty.
+		Please fill in all fields.
+	</span>
+
 </div>
