--- a/Open-ILS/web/reports/oils_rpt_folder_manager.xhtml
+++ b/Open-ILS/web/reports/oils_rpt_folder_manager.xhtml
@@ -30,7 +30,7 @@
 						<td>Share this folder:</td>
 						<td>
 							<select id='oils_rpt_folder_manager_sub_shared'>
-								<option value='no'>Do not share</option>
+								<option value='no' selected='selected'>Do not share</option>
 								<option value='yes'>Share</option>
 							</select>
 						</td>
