more spelling fixes

--- a/Open-ILS/web/reports/oils_rpt_param_editor.xhtml
+++ b/Open-ILS/web/reports/oils_rpt_param_editor.xhtml
@@ -6,11 +6,11 @@
 	<table id='oils_rpt_recur_editor_table'>
 		<tbody>
 			<tr>
-				<th>Recuring Report</th>
+				<th>Recurring Report</th>
 				<td><input type="checkbox" name="oils_rpt_recur" value="t"/></td>
 			</tr>
 			<tr>
-				<th>Recurance Interval</th>
+				<th>Recurrence Interval</th>
 				<td>
 					<select name="oils_rpt_recur_count">
 						<option value='1'>1</option>
