Now alerting a friendlier error if a duplicate non-cat-type is created

--- a/Open-ILS/xul/staff_client/server/admin/non_cat_types.xhtml
+++ b/Open-ILS/xul/staff_client/server/admin/non_cat_types.xhtml
@@ -151,6 +151,11 @@
 		Non cataloged type successfully updated
 	</span>
 
+	<span class='hide_me' id='nc_type_exists'>
+		A Non-Cat type with the selected name already exists.
+	</span>
+
+
 </html>
 
 
